chore(SidePanel): use integer syntax
Co-authored-by: Alexander Melo <alexandermelox@gmail.com>

--- a/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
+++ b/packages/ibm-products-styles/src/components/SidePanel/_side-panel.scss
@@ -33,7 +33,7 @@ $action-set-block-class: #{c4p-settings.$pkg-prefix}--action-set;
 @property --panel-transform {
   inherits: true;
   initial-value: 320px;
-  syntax: '*';
+  syntax: '<integer>';
 }
 
 @mixin setPanelSize($size: map.get($side-panel-sizes, md)) {
