refactor(overflows): adds supports at-rules

--- a/examples/carbon-for-ibm-products/example-gallery/src/components/_Gallery.scss
+++ b/examples/carbon-for-ibm-products/example-gallery/src/components/_Gallery.scss
@@ -5,6 +5,10 @@ $block-class: 'gallery';
 
 body {
   overflow-x: hidden;
+
+  @supports (overflow-inline: hidden) {
+    overflow-inline: hidden;
+  }
 }
 
 .#{$block-class}.#{$block-class} {
