--- a/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/Tearsheet/_tearsheet.scss
@@ -334,7 +334,10 @@ $motion-duration: $duration-moderate-02;
   .#{$block-class}__influencer {
     flex: 0 0 257px; // influencer width 256px plus 1px border
     border-inline-end: 1px solid $border-subtle-01;
-    overflow-block: auto;
+    overflow-y: auto;
+    @supports (overflow-block: auto) {
+      overflow-block: auto;
+    }
 
     // the normal 80% content width inside modals should not apply to influencer content
     // apply the class again for higher specificity
@@ -430,7 +433,11 @@ $motion-duration: $duration-moderate-02;
   .#{$block-class}__button-container {
     grid-column: 1 / -1;
     grid-row: -1 / -1;
-    overflow-inline: auto;
+    overflow-x: auto;
+    @supports (overflow-inline: auto) {
+      /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+      overflow-inline: auto;
+    }
   }
 
   .#{$block-class}__buttons {
