--- a/packages/ibm-products/src/components/FullPageError/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/FullPageError/_storybook-styles.scss
@@ -35,7 +35,10 @@ $story-class: 'full-page-error-stories';
 .#{$story-class}__offset {
   block-size: calc(100% - #{$spacing-09});
   margin-block-start: $spacing-09;
-  overflow-block: auto;
+  overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$story-class}__viewport {
