--- a/packages/ibm-products/src/components/Guidebanner/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/Guidebanner/_storybook-styles.scss
@@ -5,7 +5,11 @@
 // LICENSE file in the root directory of this source tree.
 //
 #storybook-root {
-  overflow-inline: hidden;
+  overflow-x: hidden;
+
+  @supports (overflow-inline: hidden) {
+    overflow-inline: hidden;
+  }
 }
 
 // The layout has been changed from middle/center to top/left, because
