--- a/packages/ibm-products/src/components/PageHeader/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/PageHeader/_storybook-styles.scss
@@ -59,12 +59,18 @@ $story-class: 'page-header-stories';
 }
 
 .#{$story-class}__viewport--scroll {
-  overflow-block: auto;
+  overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$story-class}__viewport .#{$story-class}__content-container {
   block-size: 100%;
-  overflow-block: auto;
+  overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$story-class}__viewport
@@ -74,7 +80,10 @@ $story-class: 'page-header-stories';
 }
 
 .#{$story-class}__viewport--scroll .#{$story-class}__content-container {
-  overflow-block: initial;
+  overflow-y: initial;
+  @supports (overflow-block: initial) {
+    overflow-block: initial;
+  }
 }
 
 // cspell:disable-next-line
