--- a/packages/ibm-products-styles/src/components/CreateFullPage/_create-full-page.scss
+++ b/packages/ibm-products-styles/src/components/CreateFullPage/_create-full-page.scss
@@ -82,7 +82,10 @@ $step-block-class: #{c4p-settings.$pkg-prefix}--create-full-page__step;
 .#{$block-class} .#{$block-class}__left-nav {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
-  overflow-block: auto;
+  overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$block-class} .#{$block-class}__body {
@@ -103,7 +106,11 @@ $step-block-class: #{c4p-settings.$pkg-prefix}--create-full-page__step;
   flex-grow: 1;
   background-color: $background;
   color: $text-primary;
-  overflow-inline: hidden;
+  overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    overflow-inline: hidden;
+  }
+
   padding-block-start: $spacing-06;
 }
 
@@ -122,7 +129,11 @@ $step-block-class: #{c4p-settings.$pkg-prefix}--create-full-page__step;
   border-inline-end: 1px solid $border-subtle-01;
   grid-row: 1;
   inset-block-start: 0;
-  overflow-inline: auto;
+  overflow-x: auto;
+  @supports (overflow-inline: auto) {
+    overflow-inline: auto;
+  }
+
   padding-block-start: 0;
 }
 
