--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -322,7 +322,11 @@
   .#{c4p-settings.$carbon-prefix}--data-table-content {
     block-size: 100%;
     inline-size: 100%;
-    overflow-inline: auto;
+    overflow-x: auto;
+    @supports (overflow-inline: auto) {
+      /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+      overflow-inline: auto;
+    }
   }
 
   .#{$block-class}-filter-panel
@@ -509,7 +513,10 @@
 
 .#{$block-class}__grid-container
   table.#{$block-class}__table-simple.#{c4p-settings.$carbon-prefix}--data-table.#{$block-class}__table-is-resizing {
-  overflow-block: hidden;
+  overflow-y: hidden;
+  @supports (overflow-block: hidden) {
+    overflow-block: hidden;
+  }
 }
 
 .#{$block-class}__resizableColumn {
@@ -661,7 +668,10 @@
   overflow: auto;
   inline-size: 100%;
   max-block-size: 100%;
-  overflow-block: auto;
+  overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$block-class}__carbon-row-expanded {
@@ -754,7 +764,11 @@
 .#{c4p-settings.$pkg-prefix}--datagrid__table-toolbar
   .#{c4p-settings.$carbon-prefix}--batch-actions
   .#{c4p-settings.$carbon-prefix}--batch-actions--active {
-  overflow-inline: hidden;
+  overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+    overflow-inline: hidden;
+  }
 }
 
 .#{c4p-settings.$pkg-prefix}--datagrid__table-toolbar
@@ -818,7 +832,11 @@
   inline-size: 100%;
   .#{c4p-settings.$carbon-prefix}--data-table-content {
     // overrides default scroll overflow as we handle overflow in thead and tbody separately for virtualScrollContainer variant
-    overflow-inline: hidden;
+    overflow-x: hidden;
+    @supports (overflow-inline: hidden) {
+      /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+      overflow-inline: hidden;
+    }
   }
 }
 
