--- a/examples/carbon-for-ibm-products/PageHeader/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/PageHeader/src/Example/_example.scss
@@ -8,7 +8,7 @@
   padding: 0;
   margin-top: 3rem;
   overflow-y: auto;
-  @supports (overflow-block: unset) {
-    overflow-block: unset;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
   }
 }
