refactor(borders, overflows): implements css logical props (#6768)
* refactor(borders): implements css logical props and adds stylelint rule

* Revert "refactor(borders): implements css logical props and adds stylelint rule"

This reverts commit 5004f853494df155e337a27cf52a54e53bf40998.

* refactor: also adds overflows

* refactor(overflows): adds supports at-rules

* Update examples/carbon-for-ibm-products/PageHeader/src/Example/_example.scss

---------

Co-authored-by: Sangeetha Babu <sangeetha9223@gmail.com>

--- a/packages/ibm-products-styles/src/components/ComboButton/_combo-button.scss
+++ b/packages/ibm-products-styles/src/components/ComboButton/_combo-button.scss
@@ -18,6 +18,10 @@
 .#{c4p-settings.$pkg-prefix}--combo-button__action {
   display: block;
   overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    overflow-inline: hidden;
+  }
+
   text-overflow: ellipsis;
   white-space: nowrap;
 }
