--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_datagrid.scss
@@ -323,6 +323,10 @@
     block-size: 100%;
     inline-size: 100%;
     overflow-x: auto;
+    @supports (overflow-inline: auto) {
+      /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+      overflow-inline: auto;
+    }
   }
 
   .#{$block-class}-filter-panel
@@ -510,6 +514,9 @@
 .#{$block-class}__grid-container
   table.#{$block-class}__table-simple.#{c4p-settings.$carbon-prefix}--data-table.#{$block-class}__table-is-resizing {
   overflow-y: hidden;
+  @supports (overflow-block: hidden) {
+    overflow-block: hidden;
+  }
 }
 
 .#{$block-class}__resizableColumn {
@@ -662,6 +669,9 @@
   inline-size: 100%;
   max-block-size: 100%;
   overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$block-class}__carbon-row-expanded {
@@ -755,6 +765,10 @@
   .#{c4p-settings.$carbon-prefix}--batch-actions
   .#{c4p-settings.$carbon-prefix}--batch-actions--active {
   overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+    overflow-inline: hidden;
+  }
 }
 
 .#{c4p-settings.$pkg-prefix}--datagrid__table-toolbar
@@ -819,6 +833,10 @@
   .#{c4p-settings.$carbon-prefix}--data-table-content {
     // overrides default scroll overflow as we handle overflow in thead and tbody separately for virtualScrollContainer variant
     overflow-x: hidden;
+    @supports (overflow-inline: hidden) {
+      /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+      overflow-inline: hidden;
+    }
   }
 }
 
