--- a/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-search.scss
+++ b/packages/ibm-products-styles/src/components/FilterPanel/_filter-panel-search.scss
@@ -34,4 +34,7 @@ $block-class: #{c4p-settings.$pkg-prefix}--filter-panel-search;
   /* stylelint-disable-next-line function-no-unknown */
   max-block-size: to-rem(320px);
   overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
