--- a/packages/ibm-products/src/components/CreateFullPage/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/CreateFullPage/_storybook-styles.scss
@@ -19,6 +19,9 @@ $block-class: #{c4p-settings.$pkg-prefix}--create-full-page;
   box-shadow: 0 0 4px 1px $border-subtle-01;
   color: $text-primary;
   overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$story-class}__step-fieldset--no-label
@@ -73,6 +76,9 @@ $block-class: #{c4p-settings.$pkg-prefix}--create-full-page;
 .#{$story-class}__viewport .#{$story-class}__content-container {
   block-size: 100%;
   overflow-y: auto;
+  @supports (overflow-block: auto) {
+    overflow-block: auto;
+  }
 }
 
 .#{$story-class}__viewport
