--- a/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
+++ b/packages/ibm-products-styles/src/components/AddSelect/_add-select.scss
@@ -201,6 +201,10 @@ $tearsheet-class: #{$pkg-prefix}--tearsheet;
   flex-grow: 1;
   overflow-x: auto;
 
+  @supports (overflow-inline: auto) {
+    overflow-inline: auto;
+  }
+
   .#{$block-class}__selections-form-control-label-wrapper {
     margin-inline-start: $spacing-03;
   }
