--- a/packages/ibm-products-styles/src/components/Datagrid/styles/_useNestedTable.scss
+++ b/packages/ibm-products-styles/src/components/Datagrid/styles/_useNestedTable.scss
@@ -17,6 +17,10 @@
   inline-size: calc(100% - #{$spacing-07});
   margin-inline-start: $spacing-07;
   overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+    overflow-inline: hidden;
+  }
 
   tr.#{variables.$block-class}__carbon-nested-row {
     border-inline-start: none;
