--- a/packages/ibm-products-styles/src/components/EditTearsheet/_edit-tearsheet.scss
+++ b/packages/ibm-products-styles/src/components/EditTearsheet/_edit-tearsheet.scss
@@ -66,6 +66,11 @@ $tearsheet-fieldset-class: #{c4p-settings.$pkg-prefix}--tearsheet-edit__form--fi
 .#{$block-class} .#{$block-class}__content {
   block-size: 100%;
   overflow-x: hidden;
+  @supports (overflow-inline: hidden) {
+    /* stylelint-disable-next-line declaration-property-value-disallowed-list */
+    overflow-inline: hidden;
+  }
+
   padding-block: $spacing-06;
 }
 
