fix(useravatar): variable change

--- a/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
+++ b/packages/ibm-products-styles/src/components/UserAvatar/_user-avatar.scss
@@ -83,8 +83,8 @@ $sizes: (
 @mixin setDarkBg($order, $color) {
   .#{$carbon-prefix}--g90 .#{$block-class}--#{$order},
   .#{$carbon-prefix}--g100 .#{$block-class}--#{$order},
-  [storybook-carbon-theme='g90'] .#{$block-class}--#{$order},
-  [storybook-carbon-theme='g100'] .#{$block-class}--#{$order} {
+  [data-carbon-theme='g90'] .#{$block-class}--#{$order},
+  [data-carbon-theme='g100'] .#{$block-class}--#{$order} {
     @include setBgColor($color);
   }
 }
