refactor(positions):  implements css logical props (#6777)
* refactor(positions):  implements css logical props -- top only

* refactor(position): implements css logical props -- bottom only

* refactor(position): implements css logical props - left

* refactor(position): implements css logical props - right

* fix: typos

* fix: sass variable errors

* Update packages/ibm-products-styles/src/components/Coachmark/_coachmark-overlay.scss

--- a/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
+++ b/examples/carbon-for-ibm-products/ProductiveCard/src/Example/_example.scss
@@ -18,7 +18,7 @@
 
 .ccs-theme-dropdown {
   position: fixed;
-  bottom: $spacing-05;
-  left: $spacing-05;
+  inset-block-end: $spacing-05;
   min-inline-size: 11.5rem;
+  inset-inline-start: 1rem; // stylelint-disable-line carbon/layout-use
 }
