--- a/packages/ibm-products/src/components/NotificationsPanel/_storybook-styles.scss
+++ b/packages/ibm-products/src/components/NotificationsPanel/_storybook-styles.scss
@@ -1,9 +1,12 @@
+/* stylelint-disable carbon/type-use */
+
 //
 // Copyright IBM Corp. 2020, 2020
 //
 // This source code is licensed under the Apache-2.0 license found in the
 // LICENSE file in the root directory of this source tree.
 //
+@use '@carbon/react/scss/spacing' as *;
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/themes';
 @use 'ALIAS_STORY_STYLE_CONFIG' as c4p-settings;
@@ -16,8 +19,16 @@ $storybook-block-class: #{c4p-settings.$pkg-prefix}--notifications-panel__story;
 }
 
 .#{$storybook-block-class}__add {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  block-size: 100%;
+  padding: $spacing-10 0 0 $spacing-05;
+}
+
+.#{$storybook-block-class}__header-panel {
+  padding: $spacing-10 $spacing-05 0;
+  font-weight: bold;
+  line-height: 1.4;
+  text-align: center;
+}
+
+.cds--header__global {
+  z-index: 2;
 }
