--- a/packages/ibm-products-styles/src/components/WebTerminal/_web-terminal.scss
+++ b/packages/ibm-products-styles/src/components/WebTerminal/_web-terminal.scss
@@ -8,6 +8,7 @@
 // Standard imports.
 @use '@carbon/styles/scss/colors' as *;
 @use '@carbon/styles/scss/spacing' as *;
+@use '@carbon/styles/scss/motion' as *;
 @use '@carbon/styles/scss/themes' as *;
 @use '@carbon/styles/scss/theme' as *;
 @use '../../global/styles/project-settings' as *;
@@ -58,7 +59,27 @@ $block-class: #{$pkg-prefix}--web-terminal;
   inset-block-start: $spacing-09;
   inset-inline-end: 0;
   max-inline-size: $web-terminal-width;
-  /* stylelint-disable-next-line  */
+  @media screen and (prefers-reduced-motion: reduce) {
+    &--open {
+      animation: none;
+    }
+  }
+
+  &--open {
+    animation: web-terminal-entrance $duration-moderate-02 motion(standard);
+  }
+  @media screen and (prefers-reduced-motion: reduce) {
+    &--closed {
+      animation: none;
+    }
+  }
+
+  &--closed {
+    animation: web-terminal-exit forwards $duration-moderate-02 motion(standard);
+  }
+  @media (prefers-reduced-motion) {
+    animation: none;
+  }
 }
 
 .#{$block-class}__bar {
